--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">FaceDX</string>
     <string name="title_home">Home</string>
-    <string name="title_camera">Camera</string>
+    <string name="title_camera">Kamera</string>
     <string name="title_settings">Settings</string>
     <string name="jenis_kulit">Jenis Kulit Wajah</string>
     <string name="logo_desc">Logo Aplikasi</string>
@@ -71,7 +71,7 @@
     <string name="hapus_semua_history">Hapus Semua History</string>
     <string name="berhasil_dihapus">Berhasil Dihapus</string>
     <string name="hallo">Hallo...</string>
-    <string name="desc_chatbot">Saya AyuBot, AI khusus untuk perawatan kulit Anda. Siap membantu Anda memahami kulit wajah Anda lebih dalam dan menemukan solusi terbaik.</string>
+    <string name="desc_chatbot">Saya Vivia, AI khusus untuk perawatan kulit Anda. Siap membantu Anda memahami kulit wajah Anda lebih dalam dan menemukan solusi terbaik.</string>
     <string name="start_chatbot">Yuk, mulai analisisnya!</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -80,7 +80,7 @@
 
     <string name="kirim">Kirim</string>
     <string name="ketik_keluhan_anda_disini">Ketik Keluhan Anda Di sini</string>
-    <string name="ayubot">AyuBot</string>
+    <string name="vivia_bot">Vivia</string>
     <string name="send">Send</string>
     <string name="user">User</string>
     <string name="preview">Preview</string>
